--- a/.github/workflows/ios_artifact.yml
+++ b/.github/workflows/ios_artifact.yml
@@ -25,6 +25,7 @@ jobs:
     - name: Build iOS (debug)
       run: "xcodebuild \
         -workspace ios/IOSTest.xcworkspace \
+        -UseModernBuildSystem=Yes
         -scheme IOSTest \
         clean archive \
         -sdk iphoneos \
