--- a/.github/workflows/ios_artifact.yml
+++ b/.github/workflows/ios_artifact.yml
@@ -35,5 +35,5 @@ jobs:
     - name: Upload Artifact
       uses: actions/upload-artifact@v1
       with:
-        name: IOSTest.ipa
-        path: ios/build/
+        name: IOSTest
+        path: ios/
