--- a/.github/workflows/ios_artifact.yml
+++ b/.github/workflows/ios_artifact.yml
@@ -22,18 +22,14 @@ jobs:
     - run: pod install
       working-directory: ios
       name: Install pod dependencies
-    - name: Build iOS (debug)
-      run: "xcodebuild \
-        -workspace ios/IOSTest.xcworkspace \
-        -scheme IOSTest \
-        clean archive \
-        -sdk iphoneos \
-        -configuration Debug \
-        -UseModernBuildSystem=YES \
-        -archivePath $PWD/IOSTest \
-        CODE_SIGNING_ALLOWED=NO"
+        
+    - name: Build app
+      run: |
+          xcodebuild -workspace ios/IOSTest.xcworkspace -scheme IOSTest archive -archivePath IOSTest.xcarchive -allowProvisioningUpdates
+          xcodebuild -exportArchive -archivePath ./IOSTest.xcarchive -exportPath . -exportOptionsPlist IOSTest/Info.plist
+          mv IOSTest.ipa ../IOSTest.ipa
     - name: Upload Artifact
       uses: actions/upload-artifact@v1
       with:
-        name: IOSTest
-        path: ios/
+        name: debug_build
+        path: ios/build/
