--- a/.github/workflows/ios_artifact.yml
+++ b/.github/workflows/ios_artifact.yml
@@ -34,4 +34,4 @@ jobs:
       uses: actions/upload-artifact@v1
       with:
         name: IOSTest
-        path: /Users/runner/work/ios_test_react_native/ios_test_react_native/build/
+        path: /Users/runner/work/ios_test_react_native/ios_test_react_native/build/Build/Intermediates.noindex/ArchiveIntermediates/IOSTest/BuildProductsPath/Debug-iphoneos/
