--- a/.github/workflows/ios_artifact.yml
+++ b/.github/workflows/ios_artifact.yml
@@ -1,6 +1,9 @@
 name: iOS
 
 on:
+  push:
+    branches:
+      - main
   workflow_dispatch:
     branches:
       - main
@@ -16,20 +19,27 @@ jobs:
         node-version: 14.17.0
     - run: npm ci
     - run: xcode-select -p
-    - run: pod install
-      working-directory: ios
-      name: Install pod dependencies
-    - name: Build iOS (debug)
-      run: "xcodebuild \
-        -workspace ios/IOSTest.xcworkspace \
-        -scheme IOSTest \
-        clean archive \
-        -sdk iphoneos \
-        -configuration Debug \
-        -UseModernBuildSystem=YES \
-        CODE_SIGNING_ALLOWED=NO"
+    - run: pwd
+      name: show path
+    - run: cd ~ && mkdir my_build_dir && cd my_build_dir && touch test_file.txt && cd ~
+      name: create build dir
+    - run: pwd
+      name: show path again  
+      
+#     - run: pod install
+#       working-directory: ios
+#       name: Install pod dependencies
+#     - name: Build iOS (debug)
+#       run: "xcodebuild \
+#         -workspace ios/IOSTest.xcworkspace \
+#         -scheme IOSTest \
+#         clean archive \
+#         -sdk iphoneos \
+#         -configuration Debug \
+#         -UseModernBuildSystem=YES \
+#         CODE_SIGNING_ALLOWED=NO"
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
         name: IOSTest
-        path: $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.app
+        path: my_build_dir/
