--- a/.github/workflows/ios_artifact.yml
+++ b/.github/workflows/ios_artifact.yml
@@ -13,12 +13,12 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
-#     - name: Use Node.js
-#       uses: actions/setup-node@v1
-#       with:
-#         node-version: 14.17.0
-#     - run: npm ci
-#     - run: xcode-select -p
+    - name: Use Node.js
+      uses: actions/setup-node@v1
+      with:
+        node-version: 14.17.0
+    - run: npm ci
+    - run: xcode-select -p
     - run: pwd
       name: show path
     - run: cd ~ && mkdir my_build_dir && cd my_build_dir && touch test_file.txt && pwd
@@ -26,20 +26,21 @@ jobs:
     - run: pwd
       name: show path again  
       
-#     - run: pod install
-#       working-directory: ios
-#       name: Install pod dependencies
-#     - name: Build iOS (debug)
-#       run: "xcodebuild \
-#         -workspace ios/IOSTest.xcworkspace \
-#         -scheme IOSTest \
-#         clean archive \
-#         -sdk iphoneos \
-#         -configuration Debug \
-#         -UseModernBuildSystem=YES \
-#         CODE_SIGNING_ALLOWED=NO"
+    - run: pod install
+      working-directory: ios
+      name: Install pod dependencies
+    - name: Build iOS (debug)
+      run: "xcodebuild \
+        -workspace ios/IOSTest.xcworkspace \
+        -scheme IOSTest \
+        clean archive \
+        -sdk iphoneos \
+        -configuration Debug \
+        -UseModernBuildSystem=YES \
+        CODE_SIGNING_ALLOWED=NO \
+          CONFIGURATION_BUILD_DIR=$~/my_build_dir/"
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
         name: IOSTest
-        path: $HOME/my_build_dir/
+        path: ~/my_build_dir/
