--- a/.github/workflows/ios_artifact.yml
+++ b/.github/workflows/ios_artifact.yml
@@ -1,9 +1,6 @@
 name: iOS
 
 on:
-  push:
-    branches:
-      - main
   workflow_dispatch:
     branches:
       - main
@@ -19,13 +16,6 @@ jobs:
         node-version: 14.17.0
     - run: npm ci
     - run: xcode-select -p
-    - run: pwd
-      name: show path
-    - run: cd ~ && mkdir my_build_dir && cd my_build_dir && touch test_file.txt && pwd
-      name: create build dir
-    - run: pwd
-      name: show path again  
-      
     - run: pod install
       working-directory: ios
       name: Install pod dependencies
@@ -37,10 +27,9 @@ jobs:
         -sdk iphoneos \
         -configuration Debug \
         -UseModernBuildSystem=YES \
-        CODE_SIGNING_ALLOWED=NO \
-          CONFIGURATION_BUILD_DIR=$~/my_build_dir/"
+        CODE_SIGNING_ALLOWED=NO"
     - name: Upload Artifact
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v1
       with:
         name: IOSTest
-        path: ~/my_build_dir/
+        path: ~/Library/Developer/Xcode/DerivedData/**/Build/**/*.app
