--- a/.github/workflows/ios_artifact.yml
+++ b/.github/workflows/ios_artifact.yml
@@ -19,35 +19,28 @@ jobs:
         node-version: 14.17.0
     - run: npm ci
     - run: xcode-select -p
+    - run: pwd
+      name: show path
+    - run: mkdir my_build_dir && cd my_build_dir && touch test_file.txt && pwd
+      name: create build dir
+    - run: pwd
+      name: show path again  
+      
     - run: pod install
       working-directory: ios
       name: Install pod dependencies
-    
-    - name: Build
+    - name: Build iOS (debug)
       run: "xcodebuild \
-        clean \
-        -project ios/IOSTest.xcodeproj \
-        -configuration Debug 
-        -alltargets"
-        
-    - name: Archive
-      run: "xcodebuild \
-        archive \
-        -project ios/IOSTest.xcodeproj \
+        -workspace ios/IOSTest.xcworkspace \
         -scheme IOSTest \
-        -archivePath ios/IOSTest.xcarchive \
+        clean archive \
+        -sdk iphoneos \
+        -configuration Debug \
+        -UseModernBuildSystem=YES \
+        -archivePath $PWD/my_build_dir \
         CODE_SIGNING_ALLOWED=NO"
-        
-    - name: Export iOS
-      run: "xcodebuild \
-        -exportArchive \
-        -archivePath ios/IOSTest.xcarchive \
-        -exportPath my_export_dir \
-        -exportFormat ipa \
-        -exportProvisioningProfile 'NameProvision'"
-    
-#     - name: Upload Artifact
-#       uses: actions/upload-artifact@v1
-#       with:
-#         name: IOSTest
-#         path: my_export_dir/
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: IOSTest
+        path: ~/my_build_dir/
