--- a/.github/workflows/ios_artifact.yml
+++ b/.github/workflows/ios_artifact.yml
@@ -43,4 +43,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: IOSTest
-        path: my_build_dir/
+        path: /Users/runner/Library/Developer/Xcode/DerivedData/**/Build/Intermediates.noindex/ArchiveIntermediates/IOSTest/InstallationBuildProductsLocation/Applications/IOSTest.app
