--- a/.github/workflows/ios_artifact.yml
+++ b/.github/workflows/ios_artifact.yml
@@ -37,10 +37,16 @@ jobs:
         -sdk iphoneos \
         -configuration Debug \
         -UseModernBuildSystem=YES \
-        -archivePath $PWD/my_build_dir \
+        -archivePath $PWD/my_build_dir/IOSTest.xcarchive \
         CODE_SIGNING_ALLOWED=NO"
+    - name: Export ipa
+      run: "xcodebuild \
+        -exportArchive \
+        -archivePath $PWD/my_build_dir/IOSTest.xcarchive \
+        -exportPath $PWD/my_build_dir"
+#         -exportOptionsPlist exportOptions.plist \
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
         name: IOSTest
-        path: /Users/runner/Library/Developer/Xcode/DerivedData/**/Build/Intermediates.noindex/ArchiveIntermediates/IOSTest/InstallationBuildProductsLocation/Applications/IOSTest.app
+        path: my_build_dir/
