--- a/.github/workflows/ios_artifact.yml
+++ b/.github/workflows/ios_artifact.yml
@@ -30,25 +30,10 @@ jobs:
         <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
         <plist version="1.0">
         <dict>
-        <key>compileBitcode</key>
-        <false/>
         <key>method</key>
         <string>ad-hoc</string>
-        <key>provisioningProfiles</key>
-        <dict>
-        <key>my.bundle.identifier</key>
-        <string>My Provisioning Profile Name</string>
-        </dict>
-        <key>signingCertificate</key>
-        <string>iPhone Distribution</string>
-        <key>signingStyle</key>
-        <string>manual</string>
-        <key>stripSwiftSymbols</key>
-        <true/>
         <key>teamID</key>
-        <string>YOURTEAMID</string>
-        <key>thinning</key>
-        <string>&lt;none&gt;</string>
+        <string>MatchinitTeam</string>
         </dict>
         </plist>" > exportOptions.plist 
     - run: pod install
