--- a/.github/workflows/ios_artifact.yml
+++ b/.github/workflows/ios_artifact.yml
@@ -21,6 +21,9 @@ jobs:
         node-version: 14.17.0
     - run: npm ci
     - run: xcode-select -p
+    - run: pod install
+      working-directory: ios
+      name: Install pod dependencies
     - run: pwd
       name: show path
     - run: mkdir my_build_dir && cd my_build_dir && touch test_file.txt && pwd
