--- a/.github/workflows/ios_artifact.yml
+++ b/.github/workflows/ios_artifact.yml
@@ -1,62 +1,35 @@
 name: iOS
 
-on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
-    branches:
-      - main
+on: workflow_dispatch
+    
 
 jobs:
   build:
     runs-on: macos-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js
-      uses: actions/setup-node@v1
-      with:
-        node-version: 14.17.0
-    - run: npm ci
-    - run: xcode-select -p
-    - run: pwd
-      name: show path
-    - run: mkdir my_build_dir && cd my_build_dir && touch test_file.txt && pwd
-      name: create build dir
-    - run: pwd
-      name: show path again  
-    - name: create exportOptions.plist
-      run: echo "<?xml version="1.0" encoding="UTF-8"?>
-        <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-        <plist version="1.0">
-        <dict>
-        <key>method</key>
-        <string>ad-hoc</string>
-        <key>teamID</key>
-        <string>MatchinitTeam</string>
-        </dict>
-        </plist>" > exportOptions.plist 
-    - run: pod install
-      working-directory: ios
-      name: Install pod dependencies
-    - name: Build iOS (debug)
-      run: "xcodebuild \
-        -workspace ios/IOSTest.xcworkspace \
-        -scheme IOSTest \
-        clean archive \
-        -sdk iphoneos \
-        -configuration Debug \
-        -UseModernBuildSystem=YES \
-        -archivePath $PWD/my_build_dir/IOSTest.xcarchive \
-        CODE_SIGNING_ALLOWED=NO"
-    - name: Export ipa
-      run: "xcodebuild \
-        -exportArchive \
-        -archivePath $PWD/my_build_dir/IOSTest.xcarchive \
-        -exportOptionsPlist $PWD/exportOptions.plist \
-        -exportPath $PWD/my_build_dir"
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: IOSTest
-        path: my_build_dir/
+      - uses: actions/checkout@v2
+      - uses: actions/cache@v2
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+      - uses: actions/cache@v2
+        with:
+          path: ~/Library/Caches/CocoaPods
+          key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-pods-
+      - uses: actions/cache@v2
+        with:
+          path: ~/.cocoapods
+          key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-pods-
+      - run: yarn install --frozen-lockfile
+
+      - run: pod install
+        working-directory: ios
+
+      - run: xcodebuild clean archive -workspace testCiCdReactNative.xcworkspace -scheme testCiCdReactNative -archivePath testCiCdReactNative.xcarchive CODE_SIGNING_ALLOWED=NO | xcpretty
+        working-directory: ios
