with right name

--- a/.github/workflows/ios_artifact.yml
+++ b/.github/workflows/ios_artifact.yml
@@ -31,5 +31,5 @@ jobs:
       - run: pod install
         working-directory: ios
 
-      - run: xcodebuild clean archive -workspace testCiCdReactNative.xcworkspace -scheme testCiCdReactNative -archivePath testCiCdReactNative.xcarchive CODE_SIGNING_ALLOWED=NO | xcpretty
+      - run: xcodebuild clean archive -workspace IOSTest.xcworkspace -scheme testCiCdReactNative -archivePath IOSTest.xcarchive CODE_SIGNING_ALLOWED=NO | xcpretty
         working-directory: ios
